--- a/app/views/map.xml
+++ b/app/views/map.xml
@@ -1,11 +1,11 @@
 <Alloy>
   <Window class="container">
   	
-  	<View id="menubar" class="border">
+  	<View id="menubar" class="">
 			<View id="menuLeft">
 				<Button id="backBtn" class="center_vertical"/>
 			</View>
-			<View id="menuCenter">
+			<View id="menuCenter" class="border_red">
 				<Label id="wbLogoMenubar" class="center_vertical"/>
 			</View>
 			<View id="menuRight">
