last one for the night!

--- a/app/views/placeoverview.xml
+++ b/app/views/placeoverview.xml
@@ -8,10 +8,13 @@
 		</View>
 
 		// attach blank mini header here, move just off screen (animate top pos from -80 to 0 opacity from 0.1 to 1.0)
-		<View id="miniHeader" class="">
-			<View id="menuLeft"><Button class="menubar_button"/></View>
-			<View id="menuCenter"><Label id="miniHeaderPlaceName" class="large_text" text="..."/></View>
-			<View id="menuRight" class="border_red"><ImageView id="checkinStatusImage" class="fit_width border"/></View>
+		<View id="miniHeader" class=layout_horz">
+			<View class="width_50">
+				<Label id="miniHeaderPlaceName" class="large_text" text="..."/>
+			</View>
+			<View class="fill_width border_red">
+				<ImageView id="checkinStatusImage" class="fit_height border"/>
+			</View>
 		</View>
 		
 		<ScrollView id="scrollView" showVerticalScrollIndicator="true" showHorizontalScrollIndicator="true" height="100%" width="100%">
