mapview and placeoverview logic

--- a/app/views/checkin.xml
+++ b/app/views/checkin.xml
@@ -1,7 +1,15 @@
 <Alloy>
 	
-	<Window id="checkin" platform="ios,mobileweb">
-		<Button id="backBtn"/>
+	<Window id="checkin" class="container">
+		
+		<View id="menubar">
+			<View id="menuLeft"><Button id="backBtn" class="menubar_button"/></View>
+			<View id="menuCenter"><Label id="wbLogoMenubar" class=""/></View>
+			<View id="menuRight">
+				<Button id="refreshBtn" class="menubar_button"/>
+			</View>
+		</View>
+		
 		<ScrollView>
 			<!-- Create account fields:  username, 2x passwd, submit btn -->
 			<Label id="place_checkin"></Label>	
