--- a/app/views/checkin.xml
+++ b/app/views/checkin.xml
@@ -4,7 +4,7 @@
 		
 		<View id="menubar">
 			<View id="menuLeft"><Button id="backBtn" class="menubar_button"/></View>
-			<View id="menuCenter"><Label id="wbLogoMenubar" class=""/></View>
+			<View id="menuCenter"><Label id="wbLogoMenubar" class=""/></View>	
 			<View id="menuRight">
 				<Button id="refreshBtn" class="menubar_button"/>
 			</View>
@@ -12,9 +12,8 @@
 		
 		<ScrollView>
 			<!-- Create account fields:  username, 2x passwd, submit btn -->
-			<Label id="place_checkin"></Label>	
+			<Label id="place_checkin" class="bg_white"></Label>	
 			<Label id="question" class="form_label">How many dogs are playing here?</Label>	
-			
 			<Slider id="slider" onChange="updateLabel"/>				
 			<Label id="slider_int_val" class="checkin_label"/>
 			<Label id="slider_label"	 class="checkin_label"/>
