almost caught up to Sunday's state

--- a/app/views/map.xml
+++ b/app/views/map.xml
@@ -14,7 +14,7 @@
 			<View id="mapContainer" class="fill_height border_bottom"/>
 			<!-- <View ns="Ti.Map" id="wbMapView"/> -->
 		</View>
-  	<View id="hr" height="1" backgroundColor="#343434" />
+  	<View class="hr"/>
   	<!-- <ImageView class="blue_line"/>	-->
   	<View id="placeListContainer" class="fill_height bg_lt_blue">
   		<TableView id="placeList" class="fill_height"/>
