--- a/app/views/map.xml
+++ b/app/views/map.xml
@@ -1,24 +1,5 @@
 <Alloy>
   <Window id="map" class="container">
-  	
-  	<View id="menubar">
-			<View id="menuLeft"><Button id="backBtn" class="menubar_button"/></View>
-			<View id="menuCenter"><Label id="wbLogoMenubar" class=""/></View>
-			<View id="menuRight">
-				<Button id="refreshBtn" class="menubar_button"/>
-			</View>
-		</View>
-		
-		<View class="height_50">
-			<!-- <Button id="refreshBtn" class="float_right"/> -->
-			<View id="mapContainer" class="fill_height border_bottom"/>
-			<!-- <View ns="Ti.Map" id="wbMapView"/> -->
-		</View>
-  	<View class="hr"/>
-  	<!-- <ImageView class="blue_line"/>	-->
-  	<View id="placeListContainer" class="fill_height bg_lt_blue">
-  		<TableView id="placeList" class="fill_height"/>
-  			<!-- Parks get populated in here -->
-  	</View>
-  </Window>
+  	<View id="menubar" height="60" />
+	</Window>
 </Alloy> 
