--- a/app/views/map.xml
+++ b/app/views/map.xml
@@ -1,5 +1,6 @@
 <Alloy>
   <Window id="map" class="container">
   	<View id="menubar" />
-	</Window>
+  	<Button id="refreshBtn" title="&#x2b8;" class="font_icon border_red"/>
+  </Window>
 </Alloy> 
