--- a/app/views/testview.xml
+++ b/app/views/testview.xml
@@ -1,5 +1,24 @@
 <Alloy>
 	<Window id="testview" class="container">
-		<View id="menubar" height="60" />
+		<View id="menubar"/>
+		
+		<ScrollView class="fit_height fill_width border_red">
+			
+			<Label class="font_icon_sm">1234567890-=</Label>
+			<Label class="font_icon_sm">~!@#$%^*()_+</Label>
+			<Label class="font_icon_sm">qwertyuiop[]</Label>
+			<Label class="font_icon_sm">QWERTYUIOP{}</Label>
+			<Label class="font_icon_sm">asdfghjkl;'</Label>
+		<Label class="font_icon_sm">ZXCVBNM?</Label>
+	
+			<Button class="font_icon_sm" id="cameraBtn">1</Button>
+			<Button class="font_icon_sm" id="xBtn">~</Button>
+			<Button class="font_icon_sm" id="starBtn">e</Button>
+			<Button class="font_icon_sm" id="refreshBtn">y</Button>
+			<Button class="font_icon_sm" id="infoBtn">i</Button>
+			<Button class="font_icon_sm" id="settingsBtn">Y</Button>
+			
+		</ScrollView>
+		
 	</Window>
 </Alloy>
