--- a/app/views/placeoverview.xml
+++ b/app/views/placeoverview.xml
@@ -1,27 +1,27 @@
 <Alloy>
 	<Window id="placeoverview" class="container">	
-		<View id="menubar" height="44"/>
-
-		<View id="miniHeader" class="layout_horz" height="44">
-			<View class="fill_width">
-				<Label id="miniHeaderPlaceName" class="large_text white" text=""/>
-			</View>
+		<View id="menubar" class=""/>
+		
+		<View id="miniHeaderContainer" height="60" class="" backgroundColor="#777477" zIndex="97" opacity="0" >	
+			<Label id="mini_place_name_label" 		text="" class="feed_label_left_lg white text_large_light"/>
+			<Label id="mini_place_second_label" text="" class="feed_label_left white text_medium_bold" />
+			<!-- <Label id="mini_place_dist_label" 		text="" class="feed_label_left white text_medium_bold" />	 -->
 		</View>
 		
-		<ScrollView id="scrollView" class="fill_height" top="-23">
+		<ScrollView id="scrollView" class="fill_height" top="-60" opacity="1">
 		
 			<View id="headerContainer" class="layout_vert">
 				<View id="headerTop" class="layout_horz">
 					<View class="width_50"/>
 					<View class="fill_width">
-						<View id="checkboxHeader" class="float_right border_red" /> 
+						<View id="checkboxHeader" class="float_right" /> 
 					</View>
 				</View>
 				<View id="headerBottom" class="layout_vert">
-					<Label id="place_name_label" 		text="" class="feed_label_left_lg"/>
-					<Label id="place_address_label" text="" class="feed_label_left" />
-					<Label id="place_city_label" 		text="" class="feed_label_left" />
-					<Label id="place_dist_label" 		text="" class="feed_label_left" />			
+					<Label id="place_name_label" 		text="" class="feed_label_left_lg white text_large_medium"/>
+					<Label id="place_address_label" text="" class="feed_label_left white text_medium_medium" />
+					<Label id="place_city_label" 		text="" class="feed_label_left white text_medium_medium" />
+					<Label id="place_dist_label" 		text="" class="feed_label_left white text_medium_medium" />			
 				</View>
 			</View>
 			
@@ -36,7 +36,7 @@
 			<View class="feed_item_lg">
 				<ImageView class="thumbnail" id="last_update_thumb"/>
 				<View class="middle_view" id="last_update_middle">
-					<Label class="feed_label_left" id="latest_update_static">latest update</Label>
+					<Label class="feed_label_left text_medium_light" id="latest_update_static">latest update</Label>
 						<!-- add most recent update labels here programmatically -->
 				</View>
 				<View class="right_view" id="last_update_right">
