--- a/app/views/registerpetinfo.xml
+++ b/app/views/registerpetinfo.xml
@@ -20,12 +20,11 @@
 	<Window id="registerpetinfo" class="container">
 		<View id="menubar"/>
 		
-		<ScrollView id="petinfoScrollView" class="layout_vert fill_width bg_lt_blue">
-			<Label class="form_label top_5">what is your dog's name?</Label>
+		<ScrollView id="petinfoScrollView" height="100%" class="layout_vert fill_width fit_height bg_lt_blue">
+			<Label class="form_label">what is your dog's name?</Label>
 			<TextField id="dog_name"/>
-		
 			
-			<Label class="form_label top_5">gender</Label>
+			<Label class="form_label">gender</Label>
 			<View class="layout_horz" width="100%" height="30">
 				<View>
 					<TabbedBar id="gender_button_bar" platform="ios" width="70%" height="30" tintColor="#ec3c95">
@@ -41,17 +40,23 @@
 				<Label class=""  id="female_label" width="40%">F</Label>
 				-->
 			</View>
-			<Label class="form_label top_5">breed</Label>
+			<Label class="form_label">breed</Label>
 			<TextField id="breed"/>
 			
-			<Label class="form_label top_5">birthdate</Label>
-			<Picker id="age_picker" height="20" width="85%" class="top_5"
-          onChange="ageChanged" type="Ti.UI.PICKER_TYPE_DATE"
-          minDate="1980,1,1" maxDate="2014,12,1"
-          value="2014-01-01T12:00:00">
-       </Picker>
+			<Label class="form_label">weight</Label>
+			<TextField id="weight"/>
 			
-			<!-- <Button id="continueBtn" class="btn_large top_10 bg_dk_gray" onClick="gotoPhotoUpload">continue</Button> -->
+			<Label class="form_label">birthdate</Label>
+			<TextField id="age_picker_dummy" hintText="please pick a date"/>
+			<!-- 
+			<View class="fit_height">
+				<Picker id="age_picker" contentHeight="" width="85%" class="border_blu"
+	          onChange="ageChanged" type="Ti.UI.PICKER_TYPE_DATE"
+	          minDate="1980,1,1" maxDate="2014,12,1"
+	          value="2014-01-01T12:00:00">
+	       </Picker>
+			</View> -->
+			<Button id="continueBtn" class="btn_large top_40 bg_dk_gray" onClick="gotoPhotoUpload">continue</Button>
 			
 	 	</ScrollView> 
 	 	
